# todo-rust-elm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  elm.json  fly.toml  rust-toolchain
.github/workflows/: ci-cd.yml
assets/: index.html
deploy/: app.ts  cdk.json  iam_policy.json  package-lock.json  package.json  rust-elm-stack.ts
elm-src/: Login.elm  Main.elm  Ports.elm  Register.elm  Route.elm  TaskId.elm  Tasks.elm
elm-src/Pages/: Home.elm  Login.elm  NewTask.elm  Register.elm  TaskDetails.elm
src/: app.rs  auth.rs  main.rs
tests/: PortsTest.elm  RouteTest.elm  TasksTest.elm
