[package]
name = "rust-elm"
version = "0.0.0"
edition = "2024"
description = "Elm and rust communicating over websockets"
license = "MIT"
keywords = ["elm", "websockets"]

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
use = "0.0.1-pre.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
all = "warn"
